feat(styles): update

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,7 @@
 @layer base {
   html {
     @apply font-roboto text-lg leading-tight
-    text-base-black
-    cursor-default;
+    text-base-black;
   }
 
   body {
