--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -10,4 +10,9 @@
   &:active {
     @apply opacity-70;
   }
+
+  &--disabled {
+    @apply opacity-50 
+    cursor-default pointer-events-none;
+  }
 }
