--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -21,3 +21,7 @@
 .space-header {
   margin-top: calc(theme('spacing.7') + theme('spacing.header-h'));
 }
+
+.dialog-height {
+  height: calc(100vh - theme('spacing.40'));
+}
