--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,7 +5,8 @@
   }
 
   .btn {
-    @apply flex items-center justify-center font-bold rounded;
+    @apply flex items-center justify-center font-bold rounded
+    select-none;
 
     &:active {
       @apply opacity-70;
