--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -19,10 +19,6 @@
   }
 }
 
-.space-header {
-  margin-top: calc(theme('spacing.7') + theme('spacing.header-h'));
-}
-
-.dialog-height {
-  height: calc(100vh - theme('spacing.40'));
+.inbox-height {
+  height: calc(100vh - theme('spacing.header-h'));
 }
