feat: handle loading

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -20,6 +20,14 @@
       @apply opacity-50 
       cursor-default pointer-events-none;
     }
+
+    &--pending {
+      @apply cursor-default pointer-events-none;
+
+      &:active {
+        @apply opacity-100;
+      }
+    }
   }
 }
 
